GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/SalesforceIRedeemRedemption__x.object-meta.xml
<CustomObject>
    <description>SalesforceIRedeemRedemption</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceIRedeemRedemption</externalName>
    <label>Points booking</label>
    <pluralLabel>Points bookings</pluralLabel>
</CustomObject>