GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/CashCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CashCurrencyCode__c</fullName>
    <description>CashCurrencyCode</description>
    <externalDeveloperName>CashCurrencyCode</externalDeveloperName>
    <label>Cash currency code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>