GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/InternalOrderId__c.field-meta.xml
<CustomField>
    <fullName>InternalOrderId__c</fullName>
    <description>InternalOrderId</description>
    <externalDeveloperName>InternalOrderId</externalDeveloperName>
    <label>Internal order id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>