GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <description>OrderDate</description>
    <externalDeveloperName>OrderDate</externalDeveloperName>
    <label>Order date</label>
    <type>DateTime</type>
</CustomField>