GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>OrderId</description>
    <externalDeveloperName>OrderId</externalDeveloperName>
    <label>Order id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>