GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/RewardCurrencyAmount__c.field-meta.xml
<CustomField>
    <fullName>RewardCurrencyAmount__c</fullName>
    <description>RewardCurrencyAmount</description>
    <externalDeveloperName>RewardCurrencyAmount</externalDeveloperName>
    <label>Reward currency amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>