GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <description>StoreName</description>
    <externalDeveloperName>StoreName</externalDeveloperName>
    <label>Store name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>