GearsetPOC/force-app/main/default/objects/SalesforceIRedeemRedemption__x/fields/TotalQuantityOrdered__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantityOrdered__c</fullName>
    <description>TotalQuantityOrdered</description>
    <externalDeveloperName>TotalQuantityOrdered</externalDeveloperName>
    <label>Total quantity ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>